[package]
name = "work"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
libc = "0.2"
rayon = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
